#1: Update Dockerfile to use the compiled JAR, add `mvnw`, remove unused Maven plugins